# exercism

./: pyproject.toml
javascript/hello-world/: package-lock.json
javascript/hello-world/.exercism/: metadata.json
javascript/resistor-color/: package-lock.json  resistor-color.js
javascript/resistor-color-duo/: package-lock.json  resistor-color-duo.js  resistor-color-duo.spec.js
javascript/resistor-color-duo/.exercism/: metadata.json
javascript/resistor-color/.exercism/: metadata.json
javascript/two-fer/: two-fer.js
javascript/two-fer/.exercism/: metadata.json
python/anagram/: anagram.py
python/anagram/.exercism/: metadata.json
python/armstrong-numbers/: armstrong_numbers.py
python/armstrong-numbers/.exercism/: metadata.json
python/difference-of-squares/: difference_of_squares.py
python/difference-of-squares/.exercism/: metadata.json
python/hello-world/.exercism/: metadata.json
python/high-scores/: high_scores.py
python/high-scores/.exercism/: metadata.json
python/isbn-verifier/: isbn_verifier.py
python/isbn-verifier/.exercism/: metadata.json
python/matrix/: matrix.py
python/matrix/.exercism/: metadata.json
python/palindrome-products/: palindrome_products.py
python/palindrome-products/.exercism/: metadata.json
python/pangram/: pangram.py
python/perfect-numbers/: perfect_numbers.py
python/phone-number/: phone_number.py
python/protein-translation/: protein_translation.py
python/raindrops/: raindrops.py
python/robot-name/: robot_name.py
python/series/: series.py
python/two-fer/: two_fer.py
(+9 files in other folders)
